--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.erythrium.erythrium": "Erythrium",
   "item.erythrium.rough_erythrium": "Rough Erythrium",
-  "erythrium.erythrium_tab": "Erythrium"
+  "erythrium.erythrium_tab": "Erythrium",
+  "block.erythrium.erythrium_block": "Block of Erythrium"
 }
