--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -1,7 +1,13 @@
 {
   "item.erythrium.erythrium": "Erythrium",
   "item.erythrium.rough_erythrium": "Rough Erythrium",
-  "erythrium.erythrium_tab": "Erythrium",
+  "item.erythrium.rough_": "Erythrium Chunk",
+
   "block.erythrium.erythrium_block": "Block of Erythrium",
-  "block.erythrium.erythrium_tiles_block": "Erythrium Tiles Block"
+  "block.erythrium.compacted_erythrium": "Compacted Erythrium",
+  "block.erythrium.erythrium_tiles_block": "Erythrium Tiles Block",
+  "block.erythrium.reddish_deepslate_block": "Reddish Deepslate Block",
+  "block.erythrium.reddish_deepslate_tiles_block": "Reddish Deepslate Tiles Block",
+
+  "erythrium.erythrium_tab": "Erythrium"
 }
