Ignita anadida y herramientas sjdksjdk

--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.erythrium.erythrium": "Erythrium",
   "item.erythrium.rough_erythrium": "Rough Erythrium",
   "item.erythrium.erythrium_chunk": "Erythrium Chunk",
+  "item.erythrium.ignite": "Ignite",
 
   "item.erythrium.leather_scraps": "Leather Scraps",
   "item.erythrium.iron_plates": "Iron Plates",
