--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -29,6 +29,8 @@
   "block.erythrium.erythrium_ore": "Erythrium Ore",
   "block.erythrium.deepslate_erythrium_ore": "Deepslate Erythrium Ore",
   "block.erythrium.compacted_erythrium": "Compacted Erythrium",
+  "block.erythrium.ingnite_ore": "Ignite Ore",
+  "block.erythrium.ignite_block": "Ignite Block",
 
   "erythrium.erythrium_tab": "Erythrium"
 }
