RUN DATA I FORGOR + ENCH TOME FIXED IN LANG

--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -12,7 +12,7 @@
   "item.erythrium.rough_emerald": "Rough Emerald",
   "item.erythrium.lazurite": "Lazurite",
   "item.erythrium.rose_quartz": "Rose Quartz",
-  "item.erythrium.enchanted:tome": "Enchanted Tome",
+  "item.erythrium.enchanted_tome": "Enchanted Tome",
 
   "item.erythrium.stardust": "Stardust",
   "item.erythrium.nether_star_shard": "Nether Star Shard",
