FIXED IM SO DUMB LOOOOL

--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -39,6 +39,7 @@
   "item.erythrium.ignite": "Ignite",
   "block.erythrium.rose_quartz_ore": "Rose Quartz Ore",
   "block.erythrium.rose_quartz_block": "Rose Quartz Block",
+  "item.erythrium.rose_quartz": "Rose Quartz",
 
   "block.erythrium.flint_block": "Flint Block",
 
