--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -22,10 +22,11 @@
   "item.erythrium.erythrium_axe": "Erythrium Axe",
   "item.erythrium.erythrium_shovel": "Erythrium Shovel",
   "item.erythrium.erythrium_hoe": "Erythrium Hoe",
-  
+
   "item.erythrium.tomathi": "Tomathi",
   "item.erythrium.glittermeat": "Glittermeat",
-  
+  "item.erythrium.oinkballs": "Oinkballs",
+
   "block.erythrium.erythrium_block": "Block of Erythrium",
   "block.erythrium.erythrium_tiles_block": "Erythrium Tiles Block",
   "block.erythrium.reddish_deepslate_block": "Reddish Deepslate Block",
