--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -47,5 +47,10 @@
   "item.erythrium.copper_nugget": "Copper Nugget",
   "item.erythrium.copper_circuit": "Copper Circuit",
 
+  "item.erythrium.erythrium_crown": "Erythrium Crown",
+  "item.erythrium.erythrium_chestplate": "Erythrium Chestplate",
+  "item.erythrium.erythrium_leggins": "Erythrium Leggins",
+  "item.erythrium.erythrium_boots": "Erythrium Boots",
+
   "erythrium.erythrium_tab": "Erythrium"
 }
