--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -52,5 +52,7 @@
   "item.erythrium.erythrium_leggins": "Erythrium Leggins",
   "item.erythrium.erythrium_boots": "Erythrium Boots",
 
+  "block.erythrium.tomathi_block": "Tomathi Block",
+
   "erythrium.erythrium_tab": "Erythrium"
 }
