COPPER CHARGER (NOT FUNCIONAL) ADDED

--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -46,6 +46,7 @@
 
   "item.erythrium.copper_nugget": "Copper Nugget",
   "item.erythrium.copper_circuit": "Copper Circuit",
+  "block.erythrium.copper_charger": "Copper Charger",
 
   "item.erythrium.erythrium_crown": "Erythrium Crown",
   "item.erythrium.erythrium_chestplate": "Erythrium Chestplate",
