SMITHING TEMPLATE ADDED? + FIXED RENDERING OF DIAMOND CUTTER

--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -55,5 +55,8 @@
 
   "block.erythrium.tomathi_block": "Tomathi Block",
 
+  "block.erythrium.diamond_cutter": "Diamond Cutter",
+  "tooltip.erythrium.erythrium_upgrade_smithing_template.tooltip": "",
+
   "erythrium.erythrium_tab": "Erythrium"
 }
