--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -110,5 +110,29 @@
   "item.erythrium.oxidized_copper_shovel": "Oxidized Copper Shovel",
   "item.erythrium.oxidized_copper_hoe": "Oxidized Copper Hoe",
 
+  "item.erythrium.steel_ingot": "Steel Ingot",
+  "item.erythrium.steel_plate": "Steel Plate",
+  "item.erythrium.steel_sword": "Steel Sword",
+  "item.erythrium.steel_pickaxe": "Steel Pickaxe",
+  "item.erythrium.steel_axe": "Steel Axe",
+  "item.erythrium.steel_shovel": "Steel Shovel",
+  "item.erythrium.steel_hoe": "Steel Hoe",
+
+  "item.erythrium.rose_gold_ingot": "Steel Ingot",
+  "item.erythrium.rose_gold_plate": "Steel Plate",
+  "item.erythrium.rose_gold_sword": "Steel Sword",
+  "item.erythrium.rose_gold_pickaxe": "Steel Pickaxe",
+  "item.erythrium.rose_gold_axe": "Steel Axe",
+  "item.erythrium.rose_gold_shovel": "Steel Shovel",
+  "item.erythrium.rose_gold_hoe": "Steel Hoe",
+
+  "item.erythrium.rose_gold_ingot": "Rose Gold Ingot",
+  "item.erythrium.rose_gold_plate": "Rose Gold Plate",
+  "item.erythrium.rose_gold_sword": "Rose Gold Sword",
+  "item.erythrium.rose_gold_pickaxe": "Rose Gold Pickaxe",
+  "item.erythrium.rose_gold_axe": "Rose Gold Axe",
+  "item.erythrium.rose_gold_shovel": "Rose Gold Shovel",
+  "item.erythrium.rose_gold_hoe": "Rose Gold Hoe",
+
   "erythrium.erythrium_tab": "Erythrium"
 }
