--- a/src/main/resources/assets/erythrium/lang/en_us.json
+++ b/src/main/resources/assets/erythrium/lang/en_us.json
@@ -56,6 +56,7 @@
   "block.erythrium.tomathi_block": "Tomathi Block",
 
   "block.erythrium.diamond_cutter": "Diamond Cutter",
+  "block.erythrium.metalurgic_station": "Metalurgic Station",
 
   "item.erythrium_upgrade_smithing_template.upgrade_description": "§7Erythrium Upgrade",
   "item.erythrium_upgrade_smithing_template.ingredients": "§9Erythrium Twin",
